--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@ introTitle: Learn how to make robots powered by JavaScript
           <a href="http://www.meetup.com/nodebotssf/">NodeBots SF</a> - USA
         </li>
         <li>
+          <a href="http://www.nodebots.la/">NodeBots LA</a> - USA
+        </li>
+        <li>
           <a href="http://nodebotsau.io">NodeBotsAu</a> - Australia
         </li>
         <li>
